--- a/profile.html
+++ b/profile.html
@@ -30,6 +30,7 @@
                     <span class="nav-link__counter">5</span>
                     <div class="navigation-dropdown navigation-dropdown--friends fade-in">
                         <h5 class="nav-user__dropdown-item nav-user__dropdown-header navigation-dropdown__header">Friends</h5>
+                        <div class="navigation-dropdown__items-friends">
                         <div class="navigation-dropdown__item">
                             <div class="navigation-dropdown__item-info">
                                 <div class="navigation-dropdown__item-img">
@@ -88,7 +89,8 @@
                                 </div>
                             </div>
                             <div class="navigation-dropdown__action-buttons">
-                                <button class="navigation-dropdown__accept-btn navigation-dropdown__friend-accepted"></button>
+                                    <button class="navigation-dropdown__accept-btn navigation-dropdown__friend-accepted"></button>
+                                </div>
                             </div>
                             <button class="navigation-dropdown__close-btn"></button>
                         </div>
@@ -102,6 +104,7 @@
                     <span class="nav-link__counter">5</span>
                     <div class="navigation-dropdown navigation-dropdown__invintation fade-in">
                         <h5 class="nav-user__dropdown-item nav-user__dropdown-header navigation-dropdown__header">INVITATIONS</h5>
+                        <div class="navigation-dropdown__items-invitations">
                         <div class="navigation-dropdown__item">
                             <div class="navigation-dropdown__item-info">
                                 <div class="navigation-dropdown__item-img">
@@ -155,6 +158,7 @@
                                 <button class="navigation-dropdown__accept-btn"></button>
                             </div>
                             <button class="navigation-dropdown__close-btn"></button>
+                        </div>
                         </div>
                         <div class="navigation-dropdown__item navigation-dropdown__view-all">
                             View All Requests
@@ -165,6 +169,7 @@
                     <span class="nav-link__counter">5</span>
                     <div class="navigation-dropdown navigation-dropdown__messages fade-in">
                         <h5 class="nav-user__dropdown-item nav-user__dropdown-header navigation-dropdown__header">Messages</h5>
+                        <div class="navigation-dropdown__items-messages">
                         <div class="navigation-dropdown__item">
                             <div class="navigation-dropdown__item-info">
                                 <div class="navigation-dropdown__item-img">
@@ -233,6 +238,7 @@
                             <div class="navigation-dropdown__action-buttons">
                                 <button class="navigation-dropdown__accept-btn navigation-dropdown__message-btn"></button>
                             </div>
+                        </div>
                         </div>
                         <div class="navigation-dropdown__item navigation-dropdown__view-all">
                             View All Messages
@@ -425,7 +431,6 @@
                 <div class="left-column-widget">
                     <div class="profile-interests">
                         <a href="/" class="profile-interests__header">Interests
-                            <div class="profile-interests__header-dropdown">...</div>
                         </a>
                         <div class="profile-interests__wrapper">
                             <div class="profile-interest">
