--- a/calendar.html
+++ b/calendar.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" type="text/css" href="css/profile.css">
     <link rel="stylesheet" type="text/css" href="css/calendar.css">
     <link rel="stylesheet" type="text/css" href="css/profile-modals.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
+    <link rel="stylesheet" href="http://kenwheeler.github.io/slick/slick/slick-theme.css">
 </head>
 
 <body id="body" class="body no-overflow">
@@ -300,7 +302,7 @@
     <section class="profile">
         <div class="container Calendar-Wrapper">
             <div class="Section-Header">
-                My lessons
+                My Calendar
             </div>
             <div class="SideColumn">
                 <div class="left-column-widget">
@@ -313,8 +315,10 @@
                         </span>
                         <span class="Day-MounthYear">March, 2016</span>
                     </div>
-                    <div class="Day-Events">
+                </div>
+                    <div class="Day-Events"onmousedown="return false" onselectstart="return false" >
                         <div class="Day-Event">
+                            <div class="Day-EventTime-circle"></div>
                             <span class="Day-EventTime">9:00am</span>
                             <span class="Day-EventName">English Grammar.
                                 <br> Present Simple vs Present Continuous</span>
@@ -337,6 +341,7 @@
                             </div>
                         </div>
                         <div class="Day-Event">
+                                <div class="Day-EventTime-circle"></div>
                                 <span class="Day-EventTime">9:00am</span>
                                 <span class="Day-EventName">English Grammar.
                                     <br> Present Simple vs Present Continuous</span>
@@ -359,6 +364,7 @@
                                 </div>
                         </div>
                         <div class="Day-Event">
+                                <div class="Day-EventTime-circle"></div>
                                 <span class="Day-EventTime">9:00am</span>
                                 <span class="Day-EventName">English Grammar.
                                     <br> Present Simple vs Present Continuous</span>
@@ -382,10 +388,9 @@
                         </div>
                     </div>
                     <div class="Day-Actions">
-                        <button class="Day-Btn">Go to the lesson</button>
+                        <button class="Day-Btn">START NOW</button>
                     </div>
                 </div>
-            </div>
             <div class="CentralColumn">
                 <div class="central-column-widget Calendar">
                     <div class="CalendarHeader">
@@ -604,6 +609,7 @@
                     </h3>
                     <div class="Day-Events">
                         <div class="Day-Event">
+                                <div class="Day-EventTime-circle"></div>
                             <span class="Day-EventTime">9:00am</span>
                             <span class="Day-EventName">English Grammar.
                                 <br> Present Simple vs Present Continuous</span>
@@ -626,10 +632,12 @@
                             </div>
                         </div>
                         <div class="Day-Event">
+                                <div class="Day-EventTime-circle"></div>
                             <span class="Day-EventTime">12:00pm</span>
                             <span class="Day-EventName">Yoga class</span>
                         </div>
                         <div class="Day-Event">
+                                <div class="Day-EventTime-circle"></div>
                             <span class="Day-EventTime">12:00pm</span>
                             <span class="Day-EventName">Project Discussion with classmates</span>
                         </div>
@@ -638,14 +646,32 @@
             </div>
             <div class="SideColumn">
                 <div class="ColumnWidget">
-                    <h3 class="ColumnWidget-Header">Hint</h3>
-                    <p class="ColumnWidget-Text">Here you can see your scheduled lessons You can click on the schedule and see the details of the lessons
-                        that you have joined. On the day and time of the lesson you can enter the platform</p>
+                    <span class="ColumWidged_title">Activity Feed</span>
+                    <div class="ColumnWidged_Container">
+                    <img src="svg/activity-feed-profile.svg" alt="" class="ColumnWidged_svg" width="20px" height="20px">
+                    <span class="ColumnWidged_Container_title">Green Goo Rock</span>
+                    <span class="Activity-Feed_text">Today we are going to learn the difference between two grammarses - Present Simple and Present Continuous.The level of the les...</span>
+                    <div class="Activity-Feed_image">
+                        <div class="Feed-image-free"><span class="Feed-image-free_text">Free</span></div>
+                        <div class="Feed-image-plus"><img src="svg/Plus_Button_Icon.svg" alt="" class="image-plus" width="10px"height="10px"></div>
+                    </div>
+                    <span class="Activity-Feed_date">24 APR</span><span class="Activity-Feed_time">18:00 - 22:00<span>
                 </div>
+                  <div class="ColumnWidged_Container">
+                    <img src="svg/activity-feed-profile.svg" alt="" class="ColumnWidged_svg" width="20px" height="20px">
+                    <span class="ColumnWidged_Container_title">Green Goo Rock</span>
+                    <span class="Activity-Feed_text">Today we are going to learn the difference between two grammarses - Present Simple and Present Continuous.The level of the les...</span>
+                    <div class="Activity-Feed_image">
+                            <div class="Feed-image-free display-none"><span class="Feed-image-free_text">Free</span></div>
+                        <div class="Feed-image-plus"><img src="svg/Plus_Button_Icon.svg" alt="" class="image-plus" width="10px"height="10px"></div>
+                    </div>
+                    
+                </div>
+                </div>
+                
             </div>
         </div>
     </section>
-
     <div id="modalWrapper" class="modal-wrapper display-flex">
         <div class="modal EventModal" style="position: relative; bottom: 200px;left: 25px;">
             <div class="EventModal-Header">
@@ -705,11 +731,27 @@
         </div>
     </div>
     <script src="js/jquery-1.12.3.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script>
+            $(document).ready(function(){
+              $('.your-class').slick({
+                infinite: true,
+                slidesToShow: 3,
+                slidesToScroll: 3
+              });
+            });
+            </script>
     <script>
 $('.Day-Event').on('click', function(){
     $(this).toggleClass('active');
+    $(".Day-EventTime-circle").toggleClass('clicked');
 });
 </script>
+    <script>
+            $('.CalendarDay').on('click', function(){
+                $(this).toggleClass('CalendarDay-active');
+            });
+            </script>
     <script> 
         const modalCloseBtns = Array.from(document.querySelectorAll('.EventModal-HeaderCloseBtn'));
         const openModalBtns = Array.from(document.querySelectorAll('.CalendarDay'));
@@ -731,7 +773,20 @@ $('.Day-Event').on('click', function(){
         openModalBtns.forEach(button => button.addEventListener('click', () => {
             openModal();
         }));
-    </script>
+        </script>
+<script>
+jQuery(function($){
+	$(document).mouseup(function (e){ // событие клика по веб-документу
+		var div = $(".modal");
+        var container = $(".modal-wrapper"); // тут указываем ID элемента
+		if (!div.is(e.target) // если клик был не по нашему блоку
+		    && div.has(e.target).length === 0) { // и не по его дочерним элементам
+			div.hide();
+            container.hide(); // скрываем его
+		}
+	});
+});
+</script>
 </body>
 
 </html>
