--- a/Whiteboard.html
+++ b/Whiteboard.html
@@ -151,7 +151,7 @@
                     <div class="Whiteboard-Tool">
                         <img src="svg/whiteboard/cursor.svg" alt="Select tool" title="Select tool" class="Whiteboard-ToolIcon">
                     </div>
-                                        <div class="Whiteboard-Tool">
+                                        <div class="Whiteboard-Tool Whiteboard-Tool_Active">
                         <img src="svg/whiteboard/Rectangle.svg" alt="Select tool" title="Rectangle" class="Whiteboard-ToolIcon">
                     </div>
                                         <div class="Whiteboard-Tool">
