Add originals files of platform.htnl and add Active class for tools

--- a/Whiteboard.html
+++ b/Whiteboard.html
@@ -151,8 +151,8 @@
                     <div class="Whiteboard-Tool">
                         <img src="svg/whiteboard/cursor.svg" alt="Select tool" title="Select tool" class="Whiteboard-ToolIcon">
                     </div>
-                                        <div class="Whiteboard-Tool Whiteboard-Tool_Active">
-                        <img src="svg/whiteboard/Rectangle.svg" alt="Select tool" title="Rectangle" class="Whiteboard-ToolIcon">
+                    <div class="Whiteboard-Tool">
+                        <img src="svg/whiteboard/Rectangle.svg" alt="Select tool" title="Rectangle" class="Whiteboard-ToolIcon Whiteboard-Tool_Active">
                     </div>
                                         <div class="Whiteboard-Tool">
                         <img src="svg/whiteboard/circle.svg" alt="Select tool" title="Circle" class="Whiteboard-ToolIcon">
